--- a/setup.conf
+++ b/setup.conf
@@ -18,4 +18,4 @@ test = one
 [email]
 to = boothcamerasystem@gmail.com
 from = boothcamerasystem@gmail.com
-password = grizzly2000
+password = thisHasSinceBeenChanged
